Fix for chrome not respecting border-radius overflow:hidden mask in switches

--- a/less/forms.less
+++ b/less/forms.less
@@ -482,6 +482,7 @@ input[type="radio"].radiobox:disabled + label {
 		margin: 2px;
 		border-radius: @chk-switch-border-radius;
 		overflow: hidden;
+		transform: scaleX(1);
 
 		&:before {
 			content: "";
